--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ crashlytics-build.properties
 UserSettings/
 
 Assets/Art/Nuclear/PressStart2P-Regular SDF.asset
+
+Assets/Art/Nuclear/PressStart2P-Regular SDF.asset.meta
